# esp-component-nfc

./: .gitignore  LICENSE
demo-nfc/components/nfc/: CMakeLists.txt  nfc.c
demo-nfc/components/nfc/custom/: dal.c  phDriver.c  phDriver_gpio.c  phDriver_spi.c  phDriver_timer.c
demo-nfc/components/nfc/custom/include/: BoardSelection.h  Board_Pn5180_CustomDev.h  FreeRTOS.h  dal.h  phCustomHelper.h  phDriver_gpio.h
demo-nfc/components/nfc/examples/discLoop/: NfcrdlibEx1_DiscoveryLoop.c  NfcrdlibEx1_EmvcoProfile.c  phApp_Helper.c  phApp_Init.c  phApp_PN5180_Init.c  phNfc_Example.c
demo-nfc/components/nfc/examples/discLoop/inc/: NfcrdlibEx1_DiscoveryLoop.h  NfcrdlibEx1_EmvcoProfile.h  phNfc_Example.h  ph_NxpBuild_App.h
demo-nfc/components/nfc/examples/mifareClassic/: NfcrdlibEx4_MIFAREClassic.c
demo-nfc/components/nfc/examples/mifareClassic/inc/: NfcrdlibEx4_MIFAREClassic.h
demo-nfc/components/nfc/examples/nfcForum/: NfcrdlibEx3_NFCForum.c  phApp_Helper.c  phApp_Init.c
demo-nfc/components/nfc/examples/nfcForum/inc/: NfcrdlibEx3_NFCForum.h  phApp_Init.h
demo-nfc/components/nfc/examples/simplifiedAPI/: Nfcrdlib_SimplifiedApi_ISO.c  Nfcrdlib_SimplifiedApi_ISO_15693.c  Nfcrdlib_SimplifiedApi_ISO_18000.c  Nfcrdlib_SimplifiedApi_ISO_Layer4TypeA.c  Nfcrdlib_SimplifiedApi_ISO_MFC.c  Nfcrdlib_SimplifiedApi_ISO_MFUL.c  Nfcrdlib_SimplifiedApi_ISO_TypeB.c  phApp_Helper.c  phApp_Init.c
demo-nfc/components/nfc/examples/simplifiedAPI/inc/: Nfcrdlib_SimplifiedApi_ISO.h  Nfcrdlib_SimplifiedApi_ISO_18000.h  Nfcrdlib_SimplifiedApi_ISO_MFC.h  ph_NxpBuild_App.h
demo-nfc/components/nfc/include/: Board_Pn5180_CustomDev.h  nfc.h
demo-nfc/components/nfc/nxp/: CMakeLists.txt
demo-nfc/components/nfc/nxp/ComplianceApp/: CMakeLists.txt
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_AnalogComplApp/: Nfcrdlib_EMVCo_AnalogComplApp.c  Readme.txt
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_AnalogComplApp/intfs/: Nfcrdlib_EMVCo_AnalogComplApp.h  phApp_Init.h  ph_NxpBuild_App.h
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_AnalogComplApp/mcux/: .cproject
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_AnalogComplApp/src/: phApp_Init.c
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_InteropComplApp/: CMakeLists.txt  Nfcrdlib_EMVCo_InteropComplApp.c  Readme.txt
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_InteropComplApp/intfs/: Nfcrdlib_EMVCo_InteropComplApp.h  Nfcrdlib_EMVCo_InteropComplApp_status.h  phApp_Init.h  ph_NxpBuild_App.h
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_InteropComplApp/mcux/: .cproject
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_InteropComplApp/src/: Nfcrdlib_EMVCo_InteropComplApp_status.c  phApp_Init.c  phApp_PN7462AU_Init.c
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/: Nfcrdlib_EMVCo_LoopBackComplApp.c  Readme.txt
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/intfs/: Nfcrdlib_EMVCo_LoopBackComplApp.h  phApp_Init.h  ph_NxpBuild_App.h
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/mcux/: .cproject  cr_startup_lpc175x_6x.c
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_EMVCo_LoopBackComplApp/src/: phApp_Init.c  (+2 more)
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_ISO10373_6_PCD_ComplApp/: Nfcrdlib_ISO10373_6_PCD_ComplApp.c  Readme.txt
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_ISO10373_6_PICC_ComplApp/: Nfcrdlib_ISO10373_6_PICC_ComplApp.c  Readme.txt
demo-nfc/components/nfc/nxp/ComplianceApp/Nfcrdlib_NFC_Forum_DTA_ComplApp/: Nfcrdlib_NFC_Forum_DTA_ComplApp.c  Readme.txt
demo-nfc/components/nfc/nxp/Examples/: _FRDMK82_cproject  _PN74xxxx_cproject
demo-nfc/components/nfc/nxp/Examples/NfcrdlibEx1_DiscoveryLoop/: NfcrdlibEx1_DiscoveryLoop.c  Readme.txt
demo-nfc/components/nfc/nxp/Examples/NfcrdlibEx3_NFCForum/: NfcrdlibEx3_NFCForum.c  Readme.txt
demo-nfc/components/nfc/nxp/Examples/NfcrdlibEx4_MIFAREClassic/: NfcrdlibEx4_MIFAREClassic.c  Readme.txt
demo-nfc/components/nfc/nxp/Examples/NfcrdlibEx5_ISO15693/: NfcrdlibEx5_ISO15693.c  Readme.txt
demo-nfc/components/nfc/nxp/Examples/NfcrdlibEx6_LPCD/: NfcrdlibEx6_LPCD.c  Readme.txt
demo-nfc/components/nfc/nxp/Examples/NfcrdlibEx8_HCE_T4T/: NfcrdlibEx8_HCE_T4T.c  Readme.txt
demo-nfc/components/nfc/nxp/Examples/NfcrdlibEx9_NTagI2C/: NfcrdlibEx9_NTagI2C.c  Readme.txt
demo-nfc/components/nfc/nxp/Examples/Nfcrdlib_SimplifiedAPI_ISO/: Nfcrdlib_SimplifiedApi_ISO.c  Readme.txt
demo-nfc/components/nfc/nxp/NxpNfcRdLib/: CMakeLists.txt
demo-nfc/components/nfc/nxp/NxpNfcRdLib/comps/: CMakeLists.txt
demo-nfc/components/nfc/nxp/NxpNfcRdLib/intfs/: NxpNfcRdLib_Ver.h  phCidManager.h  phCryptoRng.h  phCryptoSym.h  phKeyStore.h  phLog.h  phNfcLib.h  phNxpNfcRdLib_Config.h  phTMIUtils.h  phTools.h  phacDiscLoop.h  phalFelica.h  phalI18000p3m3.h  phalICode.h  phalMfNtag42XDna.h  phalMfc.h  phalMfdf.h  phalMfdfEVx.h  phalMfdfLight.h  phalMfp.h  phalMfpEVx.h  phalMful.h  phalT1T.h  phalTop.h  phalVca.h  phceT4T.h  phhalHw.h  phhalHw_Pn5180_Instr.h  phhalHw_Pn5180_Reg.h  phhalHw_Pn5190_Instr.h  phhalHw_Pn5190_Reg.h  phhalHw_Rc663_Cmd.h  phhalHw_Rc663_Reg.h  phlnLlcp.h  phnpSnep.h  phpalEpcUid.h  phpalFelica.h  phpalI14443p3a.h  phpalI14443p3b.h  phpalI14443p4.h  (+7 more)
demo-nfc/components/nfc/nxp/NxpNfcRdLib/types/: ph_NxpBuild.h  ph_NxpBuild_Platform.h  ph_RefDefs.h  ph_Status.h  ph_TypeDefs.h
demo-nfc/components/nfc/nxp/Platform/DAL/: CMakeLists.txt
demo-nfc/components/nfc/nxp/Platform/SDK_2.x_FRDM-K82F/: .cproject  .project  FRDM-K82F_manifest_v3_4.xml  FRDM-K82F_manifest_v3_5.xml
demo-nfc/components/nfc/nxp/RTOS/FreeRTOS/: croutine.c  list.c  phFreeRTOSConfig.c  queue.c  stream_buffer.c  tasks.c  timers.c
demo-nfc/components/nfc/src/: phApp_Helper.c  phApp_PN5180_Init.c  phNfc_Example.c
demo-nfc/components/nfc/src/inc/: phApp_Init.h  phNfc_Example.h  ph_NxpBuild_App.h
demo-nfc/main/: CMakeLists.txt  demo-nfc.c
demo-nfc/main/console/: console_cmd.cpp
demo-nfc/main/console/include/: console_cmd.hpp
(+480 files in other folders)
